// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`constructNewLiveOrder ask 1`] = `
Object {
  "account": "makerAddress",
  "amount": 122,
  "balance": 122,
  "createdAt": 1234567890,
  "currentSequence": 0,
  "expiry": 1234567890000,
  "fee": 1,
  "feeAsset": "makerCode",
  "fill": 0,
  "initialSequence": 0,
  "orderHash": "0xOrderHash",
  "pair": "makerCode|takerCode",
  "price": 3.737704918032787,
  "side": "ask",
}
`;

exports[`constructNewLiveOrder bid 1`] = `
Object {
  "account": "makerAddress",
  "amount": 457,
  "balance": 457,
  "createdAt": 1234567890,
  "currentSequence": 0,
  "expiry": 1234567890000,
  "fee": 1,
  "feeAsset": "takerCode",
  "fill": 0,
  "initialSequence": 0,
  "orderHash": "0xOrderHash",
  "pair": "takerCode|makerCode",
  "price": 0.26914660831509846,
  "side": "bid",
}
`;

exports[`getAmountAfterFee ask base flat 1`] = `
Object {
  "makerAssetAmount": 150,
  "takerAssetAmount": 1.49,
}
`;

exports[`getAmountAfterFee ask base ratio 1`] = `
Object {
  "makerAssetAmount": 150,
  "takerAssetAmount": 1.485,
}
`;

exports[`getAmountAfterFee ask flat 1`] = `
Object {
  "makerAssetAmount": 101,
  "takerAssetAmount": 1,
}
`;

exports[`getAmountAfterFee ask ratio 1`] = `
Object {
  "makerAssetAmount": 101,
  "takerAssetAmount": 1,
}
`;

exports[`getAmountAfterFee bid base flat 1`] = `
Object {
  "makerAssetAmount": 1.01,
  "takerAssetAmount": 100,
}
`;

exports[`getAmountAfterFee bid base ratio 1`] = `
Object {
  "makerAssetAmount": 1.515,
  "takerAssetAmount": 150,
}
`;

exports[`getAmountAfterFee bid flat 1`] = `
Object {
  "makerAssetAmount": 1,
  "takerAssetAmount": 99,
}
`;

exports[`getAmountAfterFee bid ratio 1`] = `
Object {
  "makerAssetAmount": 1,
  "takerAssetAmount": 99,
}
`;

exports[`getFillBeforeFee ask base flat 1`] = `15.105263157894736`;

exports[`getFillBeforeFee ask base ratio 1`] = `15.105263157894736`;

exports[`getFillBeforeFee ask flat 1`] = `14.982456140350877`;

exports[`getFillBeforeFee ask ratio 1`] = `14.95570609692548`;

exports[`getFillBeforeFee bid base flat 1`] = `56`;

exports[`getFillBeforeFee bid base ratio 1`] = `56`;

exports[`getFillBeforeFee bid flat 1`] = `56.122807017543856`;

exports[`getFillBeforeFee bid ratio 1`] = `56.56565656565657`;

exports[`getPriceBeforeFee ask base flat 1`] = `
Object {
  "amount": 123,
  "feeAmount": 1,
  "price": 3.7154471544715446,
}
`;

exports[`getPriceBeforeFee ask base ratio 1`] = `
Object {
  "amount": 123,
  "feeAmount": 4.606060606060606,
  "price": 3.7447647203744765,
}
`;

exports[`getPriceBeforeFee ask flat 1`] = `
Object {
  "amount": 122,
  "feeAmount": 1,
  "price": 3.737704918032787,
}
`;

exports[`getPriceBeforeFee ask ratio 1`] = `
Object {
  "amount": 121.78217821782178,
  "feeAmount": 1.2178217821782178,
  "price": 3.7443902439024392,
}
`;

exports[`getPriceBeforeFee bid base flat 1`] = `
Object {
  "amount": 123,
  "feeAmount": 1,
  "price": 3.6991869918699187,
}
`;

exports[`getPriceBeforeFee bid base ratio 1`] = `
Object {
  "amount": 123,
  "feeAmount": 4.514851485148515,
  "price": 3.6706109635353776,
}
`;

exports[`getPriceBeforeFee bid flat 1`] = `
Object {
  "amount": 124,
  "feeAmount": 1,
  "price": 3.6774193548387095,
}
`;

exports[`getPriceBeforeFee bid ratio 1`] = `
Object {
  "amount": 124.24242424242425,
  "feeAmount": 1.2424242424242424,
  "price": 3.670243902439024,
}
`;

exports[`parseSignedOrder 1`] = `
Object {
  "exchangeAddress": "exchangeAddress",
  "expirationTimeSeconds": "1234567890",
  "feeRecipientAddress": "feeRecipientAddress",
  "makerAddress": "makerAddress",
  "makerAssetAmount": "123000000000000000000",
  "makerAssetData": "makerAssetData",
  "makerFee": "0",
  "salt": "789",
  "senderAddress": "senderAddress",
  "signature": "signature",
  "takerAddress": "takerAddress",
  "takerAssetAmount": "456000000000000000000",
  "takerAssetData": "takerAssetData",
  "takerFee": "0",
}
`;
